--- a/public/styles.css
+++ b/public/styles.css
@@ -7,6 +7,10 @@ html {
 
 body {
   overflow-x: hidden;
+  font-family: Futura, -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', 'Helvetica Neue',
+    HelveticaNeue, YuGothic, 'Yu Gothic Medium', 'Yu Gothic', Verdana, Meiryo, sans-serif;
+  color: #222;
+  font-size: 15px;
 }
 
 /* Optional */
@@ -34,24 +38,8 @@ Components
   box-sizing: content-box; /* Optional */
   margin: 0 auto;
   padding: 0 20px;
-  max-width: 980px;
+  max-width: 42rem;
   height: 100%;
-  background-color: #d9435f0f;
-}
-.c-container.\--768 {
-  max-width: 768px;
-}
-.c-container.\--1200 {
-  max-width: 1200px;
-}
-.c-container.\--tablet {
-  max-width: 768px;
-}
-.c-container.\--small {
-  max-width: 768px;
-}
-.c-container.\--large {
-  max-width: 1200px;
 }
 .c-container.\--full {
   max-width: none;
@@ -61,137 +49,105 @@ Components
   padding-right: 0;
 }
 
-.c-header {
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #d9435f;
-}
-.c-header_inner {
+.c-wrapper {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-}
-.c-header_logo {
-  font-size: 18px;
-  font-weight: bold;
-  color: #fff;
-}
-
-.c-header_nav {
-}
-.c-header_nav ul {
-  display: flex;
-}
-.c-header_nav li {
-}
-.c-header_nav a {
-  display: block;
-  padding: 12px 20px;
-  color: #fff;
-}
-.c-header_nav a:hover {
-  opacity: 0.7;
-}
-
-.c-header_menu-button {
-  position: relative;
-  width: 40px;
-  height: 40px;
-}
-.c-header_menu-button span {
-  position: absolute;
-  display: inline-block;
-  top: calc(50% - 1.5px);
-  left: 50%;
-  height: 3px;
-  width: 25px;
-  background-color: #fff;
-  transition: 0.3s cubic-bezier(0.22, 1, 0.36, 1);
-}
-.c-header_menu-button span:nth-child(1) {
-  transform: translate(-50%, -8px);
-}
-.c-header_menu-button span:nth-child(2) {
-  transform: translate(-50%, 0);
-}
-.c-header_menu-button span:nth-child(3) {
-  transform: translate(-50%, 8px);
-}
-body.\--menu-open .c-header_menu-button span:nth-child(1) {
-  transform: translate(-50%, 0) rotate(45deg);
-}
-body.\--menu-open .c-header_menu-button span:nth-child(2) {
-  transform: translate(-50%, 0) rotate(-45deg);
-}
-body.\--menu-open .c-header_menu-button span:nth-child(3) {
-  opacity: 0;
-}
-
-.c-sp-menu {
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #fff;
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.3s;
-}
-.c-sp-menu_inner {
-  display: flex;
-  height: 100%;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
 }
-.c-sp-menu_link {
-  display: block;
-  padding: 6px 12px;
-}
-body.\--menu-open .c-sp-menu {
-  opacity: 1;
-  pointer-events: auto;
+@media screen and (min-width: 768px) {
+  .c-wrapper {
+    flex-direction: row;
+    padding: 0 40px;
+  }
 }
 
-.c-footer {
-  height: 40px;
-  background-color: #d9435f0f;
+.c-header {
 }
-.c-footer_inner {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 100%;
-  background-color: #d9435f0f;
+.c-header_inner {
+  padding-top: 20px;
+  line-height: 1.75;
 }
-.c-footer_title {
-  font-size: 14px;
+@media screen and (min-width: 768px) {
+  .c-header {
+  }
+  .c-header_inner {
+    padding-top: 100px;
+    padding-right: 20px;
+  }
+}
+
+.c-title {
+  font-size: 2rem;
   font-weight: bold;
+  margin-bottom: 60px;
 }
-.c-footer_copyright {
-  font-size: 12px;
+@media screen and (min-width: 768px) {
+  .c-title {
+  }
 }
 
-.c-component-01 {
-  position: fixed;
-  right: 40px;
-  height: 40px;
-  bottom: 40px;
-  width: 40px;
-  background-color: crimson;
+.c-main {
 }
-.c-component-02 {
-  right: 40px;
-  height: 40px;
-  bottom: 40px;
-  width: 40px;
-  background-color: crimson;
+.c-main_inner {
+  padding-bottom: 80px;
+  line-height: 1.75;
+}
+@media screen and (min-width: 768px) {
+  .c-main {
+  }
+  .c-main_inner {
+    padding-top: 40px;
+    padding-bottom: 80px;
+  }
+  .c-main_inner section:first-child .c-subtitle {
+    margin-top: 0;
+  }
+}
+
+.c-subtitle {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-top: 40px;
+  margin-bottom: 0.5em;
+}
+@media screen and (min-width: 768px) {
+  .c-subtitle {
+    margin-top: 60px;
+  }
+}
+
+.c-sub2title {
+  font-size: 1rem;
+  font-weight: bold;
+  margin-top: 20px;
+  margin-bottom: 0.5em;
+}
+@media screen and (min-width: 768px) {
+  .c-sub2title {
+    margin-top: 30px;
+  }
+}
+
+.c-inline-list {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+}
+.c-inline-list.\--small {
+  font-size: 13px;
+}
+.c-inline-list li {
+}
+.c-inline-list li:not(:last-child) {
+}
+.c-inline-list li:not(:last-child)::after {
+  content: '/';
+  padding-left: 0.5em;
+  padding-right: 0.5em;
+}
+@media screen and (min-width: 768px) {
+  .c-inline-list {
+  }
 }
 
 /* ────────────────────
@@ -222,28 +178,28 @@ Utilities
   }
 }
 
-.u-flex {
-  display: flex;
+.u-text-link {
+  position: relative;
+  display: inline-flex;
+  color: #999;
+  overflow: hidden;
+  transition: 0.2s;
 }
-.u-justify-center {
-  justify-content: center;
+.u-text-link::after {
+  position: absolute;
+  content: '';
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #000;
+  transform: translateX(-100%);
+  transition: 0.2s;
 }
-.u-justify-center {
-  justify-content: center;
-}
-.u-justify-between {
-  justify-content: space-between;
+.u-text-link:hover {
+  color: #000;
 }
 
-.u-mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.u-text-center {
-  text-align: center;
-}
-
-.u-h-400 {
-  height: 400px;
+.u-text-link:hover::after {
+  transform: translateX(0%);
 }
