--- a/public/styles.css
+++ b/public/styles.css
@@ -7,8 +7,7 @@ html {
 
 body {
   overflow-x: hidden;
-  font-family: Futura, -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', 'Helvetica Neue',
-    HelveticaNeue, YuGothic, 'Yu Gothic Medium', 'Yu Gothic', Verdana, Meiryo, sans-serif;
+  font-family: futura-pt, YuGothic, 'Yu Gothic Medium', 'Yu Gothic', Verdana, Meiryo, sans-serif;
   color: #333;
 }
 
