Adjust hover line position

--- a/public/styles.css
+++ b/public/styles.css
@@ -206,7 +206,7 @@ Utilities
   position: absolute;
   content: '';
   left: -1px;
-  bottom: 0;
+  bottom: 2px;
   width: 100%;
   height: 1px;
   background-color: var(--color-text-hard);
